--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "fetch": "^1.1.0",
     "open-browser-webpack-plugin": "0.0.3",
