mongodb数据库连接

--- a/myMessage/package.json
+++ b/myMessage/package.json
@@ -4,7 +4,7 @@
   "description": "this is message",
   "main": "entry.js",
   "scripts": {
-    "start": "webpack-dev-server --hot"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,11 +14,15 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "express": "^4.14.1",
+    "mongoose": "^4.8.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.16.1"
   }
 }
