--- a/myMessage/package.json
+++ b/myMessage/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "body-parser": "^1.16.0",
     "express": "^4.14.1",
     "mongoose": "^4.8.1",
     "react": "^15.4.2",
