--- a/myMessage/package.json
+++ b/myMessage/package.json
@@ -25,5 +25,9 @@
     "webpack-dev-middleware": "^1.10.0",
     "webpack-dev-server": "^1.16.2",
     "webpack-hot-middleware": "^2.16.1"
+  },
+  "devDependencies": {
+    "react-router": "^3.0.5",
+    "react-router-dom": "^4.1.1"
   }
 }
