--- a/myMessage/package.json
+++ b/myMessage/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "react-router": "^3.0.5",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "webpack-dev-server": "^1.16.5"
   }
 }
