--- a/myMessage/package.json
+++ b/myMessage/package.json
@@ -21,14 +21,19 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
-    "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-dev-server": "^1.16.2",
     "webpack-hot-middleware": "^2.16.1"
   },
   "devDependencies": {
+    "css-loader": "^0.28.2",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "node-sass": "^4.5.3",
     "react-router": "^3.0.5",
     "react-router-dom": "^4.1.1",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.18.1",
+    "webpack": "^2.6.1",
     "webpack-dev-server": "^1.16.5"
   }
 }
