--- a/myMessage/package.json
+++ b/myMessage/package.json
@@ -29,6 +29,7 @@
     "css-loader": "^0.28.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "node-sass": "^4.5.3",
+    "prop-types": "^15.5.10",
     "react-router": "^3.0.5",
     "react-router-dom": "^4.1.1",
     "sass-loader": "^6.0.5",
